columns spacing fixed

--- a/app/assets/stylesheets/site.scss
+++ b/app/assets/stylesheets/site.scss
@@ -23,19 +23,25 @@ div[class$="-scrollable"] {
 }
 
 .component-row {
-	display: flex;
-	flex-flow: column wrap;
-	justify-content: space-between;
-	margin-right: 5px;
+	margin: 0;
+	padding: 0 5px;
 }
+
 .component-col {
-	width: 49%;
-	flex: 1 0 350px;
-	display: flex;
-	flex-flow: column wrap;
+	padding: 0;
 }
+
+@media (min-width: $screen-md-min) {
+	.col-a {
+		padding-right: 3px;
+	}
+	.col-b {
+		padding-left: 3px;
+	}
+}
+
 .sidebar {
-	padding: 0 5px 0 10px;
+	padding: 0 0 0 5px;
 }
 .main {
 	padding: 0;
